# LoombitSoftware

./: .env.example  .gitattributes  .gitignore  .write_probe  AGENTS.md  CLAUDE.md  LICENSE  Loombit.vbs  README.md  build_exe.ps1  diagnostics.py  do_git_push.py  fix_and_restart.bat  loombit.spec  pyproject.toml  rebuild_exe.bat  requirements.txt
.claude/: launch.json  settings.json
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
demo_verify/: iva.py  test_iva_hollow.py  test_iva_honest.py  test_iva_tautological.py
docs/: ALGORITMO_CEREBRO.md  ALGORITMO_CEREBRO_EXISTENTE.md  ARQUITECTURA_PLATAFORMA_LOOMBIT.md  ARQUITECTURA_SKILLS.md  AUDITORIA_DISENO_CEREBRO_2026-06-10.md  AUDITORIA_LOOP_2026-06-09.md  AUDITORIA_UX_2026-06-09.md  BANCO_SUPUESTOS_LOOMBIT.md  BAREMOS_PRUEBAS_Y_GOLDEN_D1_D9.md  BLINDAJE.md  BRUJULA.md  BRUJULA_ALGORITMO.md  BRUJULA_Y_GOBIERNO_V2_FUSION.md  CABLE_SESIONES.md  CADENA_GOBIERNO.jsonl  CAPACIDADES_Y_HERRAMIENTAS.md  CONOCIMIENTO_OFICIO_ADMINISTRATIVO.md  DECISIONES.md  DEFINITION_OF_DONE.md  DESTILADO_LOOMBIT.md  DESTILADO_STUFF_CAJA_AGENTE_LOOMBIT_2026-06-14.md  DISENO_ADAPTADOR_NAVEGADOR_PILOT.md  DOMINIO_ADMINISTRATIVO_LOOMBIT.md  EL_MURO.md  ESTADO_ARTE_Y_HUECOS.md  ESTADO_Y_ROADMAP.md  EXPERIENCIA_LOOMBIT.md  FABRICA_AUTOMEJORA.md  FABRICA_DE_SKILLS.md  GALAXIA_LOOMBIT.md  HANDOFF_ARQUITECTURA_PLATAFORMA.md  HANDOFF_FUSION_BRUJULA_V2.md  HANDOFF_NEXT_SESSION.md  IA_TENDENCIAS_INSPIRACION_LOOMBIT.md  INFORME_BARRIDO_AGENTES_IA_2026-06-13.md  INFORME_MEJORA_BRUJULA_2026-06-11.md  INFORME_MEJORA_BRUJULA_GOBIERNO_2026-06-11.md  INFORME_MEJORA_BRUJULA_TIER2_2026-06-11.md  INFORME_MEJORA_BRUJULA_TIER3_2026-06-11.md  INNOVACIONES.md  (+32 more)
evals/: __init__.py  cases.py  runner.py  taxonomy.py
inbox/: 20260614T084457_7a7a63ab.json  20260614T084628_0825dd3d.json  20260614T224806_d09d2a54.json  20260614T225357_80e5f0fb.json  20260614T225450_c00d5261.json  20260614T225538_83a4d9e7.json  20260614T225631_401c935d.json  20260614T225748_c14ce88f.json  20260614T225812_f9573059.json  20260614T225847_fa487956.json  20260614T225916_1bb47aed.json  20260614T230137_687f52d8.json  20260614T230244_9e75451d.json  20260614T230310_34751e57.json  20260614T230401_d4971297.json  20260614T230409_80371791.json  20260614T230458_c29bd525.json  20260614T230520_c7ffa8d9.json  20260614T230554_168c48a6.json  20260614T230622_5246342b.json  20260614T230646_78c6e90b.json  20260614T230723_a98766f3.json  20260614T230737_5541aa51.json  20260614T230825_af762a78.json  20260614T230850_a5c83944.json  20260614T230910_ded91883.json  20260614T231024_3681db2e.json  20260614T231121_b79052e0.json  20260614T231218_66021bab.json  20260614T231316_8e1cedf2.json  20260614T231412_4987ddbb.json  20260614T231509_7559688e.json  20260614T231606_3e8723dc.json  20260614T231702_1f980a36.json  20260614T231803_4dcb0192.json  20260614T231901_b4be4186.json  20260614T231958_6167781b.json  20260614T232055_3a5cd045.json  20260614T232151_a0b24dfd.json  20260614T232253_40c29025.json  (+146 more)
kit-gobierno/: BRUJULA.md  CLAUDE.md  CODEOWNERS  INSTALAR.md  brujula_check.py  gobierno.workflow.yml  pull_request_template.md
loombit_operator/: __init__.py  alias_resolver.py  anticipacion.py  aprender_skill.py  aprendizaje.py  autonomy.py  cobros.py  comprension.py  conciliacion.py  conducta.py  config.py  credentials.py  cuentas_cobrar.py  decisions.py  decisions_cobros.py  docs_intel.py  docs_intel_vision.py  el_muro_centinela.py  entregable.py  entregable_docx.py  expedientes.py  galaxia.py  galaxia_actions.py  galaxia_cache.py  galaxia_intel.py  gmail_adjuntos.py  habitos.py  habitos_runs.py  launcher.py  llm.py  llm_health.py  lm_jobs.py  main.py  mcp_server.py  onboarding.py  percepcion_correo.py  preferencias_correo.py  priorizador.py  rag.py  recipients.py  (+18 more)
outbox/: 20260614T084457_7a7a63ab.json  20260614T084628_0825dd3d.json  (+184 more)
(+316 files in other folders)
