[project]
name = "loombit-operator"
version = "0.1.0"
description = "Loombit Operator — operador de IA local-first, núcleo blanco con skills instalables."
requires-python = ">=3.11"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Los notebooks de docs son prosa (no código): no los lintamos como Python.
extend-exclude = ["*.ipynb"]

[tool.pytest.ini_options]
addopts = "-q --cov=loombit_operator --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.report]
# Suelo de cobertura (§GOB-2b, D-67): el verde EXIGE no bajar de aquí. Ratchet: solo sube.
# Inicial conservador (cobertura real ~71%); se calibra/sube con el primer CI y a medida que crece.
fail_under = 68
