[project]
name = "loombit-operator"
version = "0.1.0"
description = "Loombit Operator — operador de IA local-first, núcleo blanco con skills instalables."
requires-python = ">=3.11"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Los notebooks de docs son prosa (no código): no los lintamos como Python.
extend-exclude = ["*.ipynb"]

[tool.pytest.ini_options]
addopts = "-q --cov=loombit_operator --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.report]
# Suelo de cobertura (§GOB-2b, D-67): el verde EXIGE no bajar de aquí. Ratchet: solo sube.
# Subido a 70 (cobertura real ~71%) — D-73. Margen mínimo a propósito: añadir código sin test lo rompe.
fail_under = 70
