[project]
name = "loombit-operator"
version = "0.1.0"
description = "Loombit Operator — operador de IA local-first, núcleo blanco con skills instalables."
requires-python = ">=3.11"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Los notebooks de docs son prosa (no código): no los lintamos como Python.
extend-exclude = ["*.ipynb"]

[tool.pytest.ini_options]
addopts = "-q --cov=loombit_operator --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
# ADAPTADORES INTESTABLES sin hardware/credenciales/red reales — EXCLUIDOS de la cuenta y DECLARADOS
# aquí a la vista (D-74). No se simulan con mocks (eso sería cobertura que miente). El 100% se mide
# sobre la LÓGICA; estos adaptadores se verifican EN VIVO (recibo manual), no por unit test.
omit = [
    "loombit_operator/launcher.py",                    # arranque de escritorio + bandeja del SO
    "loombit_operator/pilot/*",                        # control real de ratón/teclado/pantalla (hardware)
    "loombit_operator/tools/pilot.py",                 # tools de control de escritorio
    "loombit_operator/tools/computer.py",              # control de escritorio
    "loombit_operator/routers/computer.py",            # router de control de escritorio
    "loombit_operator/routers/pilot.py",               # router de control de escritorio
    "loombit_operator/llm.py",                         # llamadas reales al LLM local (LM Studio)
    "loombit_operator/skill_blanca_gmail.py",          # envío real por la API de Gmail (red)
    "loombit_operator/skill_blanca_calendar.py",       # creación real en Calendar (red)
    "loombit_operator/skill_blanca_oauth.py",          # OAuth: navegador + keyring del SO
    "loombit_operator/routers/skill_blanca_oauth.py",  # router OAuth
    "loombit_operator/docs_intel_vision.py",           # modelo de visión local (VL)
]

[tool.coverage.report]
# Suelo de cobertura (§GOB-2b, D-67): el verde EXIGE no bajar de aquí. Ratchet: solo sube.
# Meta: 100% sobre la LÓGICA (adaptadores excluidos arriba, D-74). Se sube por rondas; hoy 77 (real 77,96%).
fail_under = 77
